feat(instances): api key authentication
